# Deds-Opdrachten

./: DEDS_WC_1.1a_Opdrachten.ipynb  DEDS_WC_1.1b_Opdrachten.ipynb  DEDS_WC_1.2_en_1.3_Opdrachten(2).ipynb  README.md  Untitled-1.ipynb  pyproject.toml
